# ErrorMap

./: README.md  pyproject.toml  requirements.txt
src/app/: app.py
src/error_map/: __init__.py  cli.py
src/error_map/core/: config.py
src/error_map/inference/: __init__.py  client.py
src/error_map/stages/: __init__.py  data_preparation.py  error_classification.py  recursive_taxonomy.py  single_error.py  taxonomy_construction.py  taxonomy_population.py
src/error_map/templates/: __init__.py  json_renderer.py  template_renderer.py
src/error_map/templates/prompts/: classify_errors.j2  single_error_analysis.j2  taxonomy_generation.j2  taxonomy_review.j2  taxonomy_update.j2
src/error_map/templates/response_schemas/: classify_errors_schema.json  generate_taxonomy_schema.json  review_taxonomy_schema.json  single_error_schema.json  update_taxonomy_schema.json
src/error_map/utils/: __init__.py  cache.py  constants.py  taxonomy_tree.py
